--- a/testing.ipynb
+++ b/testing.ipynb
@@ -110,11 +110,11 @@
         ")\n"
       ],
       "metadata": {
-        "id": "dvm1Cjngv7Pr",
-        "outputId": "be04722b-8e82-4c6c-ac9b-e07e849cce26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dvm1Cjngv7Pr",
+        "outputId": "be04722b-8e82-4c6c-ac9b-e07e849cce26"
       },
       "execution_count": 55,
       "outputs": [
@@ -299,11 +299,11 @@
         "    test_accuracies.append(test_accuracy)"
       ],
       "metadata": {
-        "id": "1UxXh0LmxSnI",
-        "outputId": "c73898fb-42fe-4555-afbb-0e3424b7bb73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1UxXh0LmxSnI",
+        "outputId": "c73898fb-42fe-4555-afbb-0e3424b7bb73"
       },
       "execution_count": 59,
       "outputs": [
@@ -619,6 +619,7 @@
       "cell_type": "code",
       "source": [
         "# Load test.csv\n",
+        "torch.save(model.state_dict(), \"state\")\n",
         "test_data = pd.read_csv(\"test.csv\")\n",
         "\n",
         "# Extract IDs and image data\n",
@@ -635,7 +636,7 @@
       "metadata": {
         "id": "3bFwrBjaT9fx"
       },
-      "execution_count": 62,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -683,11 +684,11 @@
         "print(\"Predictions saved to submission.csv\")"
       ],
       "metadata": {
-        "id": "z0zhH3W0UyKI",
-        "outputId": "77993cc2-9202-46ad-f851-df5fc50e7b35",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "z0zhH3W0UyKI",
+        "outputId": "77993cc2-9202-46ad-f851-df5fc50e7b35"
       },
       "execution_count": 65,
       "outputs": [
