--- a/F24_4ML3_Assignment_4.ipynb
+++ b/F24_4ML3_Assignment_4.ipynb
@@ -199,7 +199,7 @@
         "outputId": "0f5bc9ae-5d76-490b-c10d-22c80207d4fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 410
+          "height": 357
         }
       },
       "execution_count": 4,
@@ -647,11 +647,11 @@
       ],
       "metadata": {
         "id": "fn7UkttYHA4P",
-        "outputId": "b9aadaaa-5344-4259-dc2e-13cc4d39cb30",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "outputId": "b9aadaaa-5344-4259-dc2e-13cc4d39cb30"
       },
       "execution_count": 14,
       "outputs": [
@@ -675,11 +675,11 @@
       ],
       "metadata": {
         "id": "YV5fI0QaHD-I",
-        "outputId": "7564c118-93c3-45f9-dcc8-73c53bc66335",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "outputId": "7564c118-93c3-45f9-dcc8-73c53bc66335"
       },
       "execution_count": 15,
       "outputs": [
@@ -933,11 +933,6 @@
         "\n",
         "        self.conv2 = nn.Conv2d(in_channels=30, out_channels=3, kernel_size=3, padding=1, stride=1)\n",
         "        self.sigmoid2 = nn.Sigmoid()\n",
-        "        ########################\n",
-        "        ########################\n",
-        "        #### YOUR CODE HERE ####\n",
-        "        ########################\n",
-        "        ########################\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = self.conv1(x)\n",
@@ -945,12 +940,7 @@
         "\n",
         "        x = self.conv2(x)\n",
         "        x = self.sigmoid2(x)\n",
-        "        return x\n",
-        "        ########################\n",
-        "        ########################\n",
-        "        #### YOUR CODE HERE ####\n",
-        "        ########################\n",
-        "        ########################\n"
+        "        return x\n"
       ]
     },
     {
@@ -1052,7 +1042,6 @@
         "    - test_loss_epochs: List of average test losses per epoch\n",
         "    \"\"\"\n",
         "\n",
-        "    # Move model to the specified device\n",
         "\n",
         "    ########################\n",
         "    ########################\n",
